crates/pg_syntax/tests/snapshots/postgres_regress/json@164.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[1,2,3]'::json #> '{}';"
---
SelectStmt@0..31
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    AExpr@7..30
      TypeCast@7..22
        AConst@7..16
          Sconst@7..16 "'[1,2,3]'"
        Typecast@16..18 "::"
        TypeName@18..22
          Ident@18..22 "json"
      Whitespace@22..23 " "
      Op@23..25 "#>"
      Whitespace@25..26 " "
      AConst@26..30
        Sconst@26..30 "'{}'"
  Ascii59@30..31 ";"

