crates/pg_syntax/tests/snapshots/postgres_regress/json@165.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '\"foo\"'::json #> '{}';"
---
SelectStmt@0..29
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..28
    AExpr@7..28
      TypeCast@7..20
        AConst@7..14
          Sconst@7..14 "'\"foo\"'"
        Typecast@14..16 "::"
        TypeName@16..20
          Ident@16..20 "json"
      Whitespace@20..21 " "
      Op@21..23 "#>"
      Whitespace@23..24 " "
      AConst@24..28
        Sconst@24..28 "'{}'"
  Ascii59@28..29 ";"

