crates/pg_syntax/tests/snapshots/postgres_regress/json@166.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '42'::json #> '{}';"
---
SelectStmt@0..26
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..25
    AExpr@7..25
      TypeCast@7..17
        AConst@7..11
          Sconst@7..11 "'42'"
        Typecast@11..13 "::"
        TypeName@13..17
          Ident@13..17 "json"
      Whitespace@17..18 " "
      Op@18..20 "#>"
      Whitespace@20..21 " "
      AConst@21..25
        Sconst@21..25 "'{}'"
  Ascii59@25..26 ";"

