crates/pg_syntax/tests/snapshots/postgres_regress/json@167.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'null'::json #> '{}';"
---
SelectStmt@0..28
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..27
    AExpr@7..27
      TypeCast@7..19
        AConst@7..13
          Sconst@7..13 "'null'"
        Typecast@13..15 "::"
        TypeName@15..19
          Ident@15..19 "json"
      Whitespace@19..20 " "
      Op@20..22 "#>"
      Whitespace@22..23 " "
      AConst@23..27
        Sconst@23..27 "'{}'"
  Ascii59@27..28 ";"

