crates/pg_syntax/tests/snapshots/postgres_regress/json@173.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{\"a\": {\"b\":{\"c\": \"foo\"}}}'::json #> array['a','b','c','d'];"
---
SelectStmt@0..67
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..65
    AExpr@7..65
      TypeCast@7..40
        AConst@7..34
          Sconst@7..34 "'{\"a\": {\"b\":{\"c\": \"fo ..."
        Typecast@34..36 "::"
        TypeName@36..40
          Ident@36..40 "json"
      Whitespace@40..41 " "
      Op@41..43 "#>"
      Whitespace@43..44 " "
      AArrayExpr@44..65
        Array@44..49 "array"
        Ascii91@49..50 "["
        AConst@50..53
          Sconst@50..53 "'a'"
        Ascii44@53..54 ","
        AConst@54..57
          Sconst@54..57 "'b'"
        Ascii44@57..58 ","
        AConst@58..61
          Sconst@58..61 "'c'"
        Ascii44@61..62 ","
        AConst@62..65
          Sconst@62..65 "'d'"
  Ascii93@65..66 "]"
  Ascii59@66..67 ";"

